# wise-coop

./: .gitignore  LICENSE  README.md  answer.npy  example.ipynb  setup.cfg  test.npy
wise-coop/: __init__.py  _cooperante.py
wisecoop/: __init__.py  _cooperante.py
wscoop/: __init__.py  _cooperante.py
