[metadata]
name = wisecoop
version = 0.0.1
url = https://github.com/TDAILab/wise-coop
author = Koki Noda, Naoto Takahashi
license_file = LICENSE
description = Optimizer for co-operation of ML prediction and human correction
# long_description = file: README.md
# long_description_content_type = text/markdown

[options]
zip_safe = False
packages = find:
install_requires = 
	numpy
	pandas
	matplotlib
	scikit-learn
